[gd_scene load_steps=4 format=3 uid="uid://cornhcpsobmu1"]

[ext_resource type="Script" uid="uid://cw0gyfkohyvvp" path="res://scripts/pause_screen.gd" id="1_d0qpy"]
[ext_resource type="PackedScene" uid="uid://dwff7qo2uv252" path="res://scenes/controls.tscn" id="2_77lkr"]
[ext_resource type="PackedScene" uid="uid://bce251ilfs4i7" path="res://scenes/settings.tscn" id="3_a17gf"]

[node name="pause_screen" type="Node2D"]
script = ExtResource("1_d0qpy")

[node name="contols" parent="." instance=ExtResource("2_77lkr")]
position = Vector2(-570, 13)
scale = Vector2(2.215, 2.215)

[node name="resume" type="Button" parent="."]
offset_left = 782.0
offset_top = 265.0
offset_right = 1092.0
offset_bottom = 370.0
theme_override_font_sizes/font_size = 70
text = "resume"

[node name="settings" type="Button" parent="."]
offset_left = 747.0
offset_top = 388.0
offset_right = 1136.0
offset_bottom = 492.0
theme_override_font_sizes/font_size = 70
text = "Settings
"

[node name="exit" type="Button" parent="."]
offset_left = 767.0
offset_top = 510.0
offset_right = 1118.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 70
text = "Exit Game"

[node name="SettingsScreen" parent="." instance=ExtResource("3_a17gf")]
visible = false

[connection signal="pressed" from="resume" to="." method="_on_reuseme_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
